AWS_EKS/10.ExternalDNS/kube-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-external-dns
  annotations:
  # Give ALB Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: external-dns-lb

  # Give ALB Types: Internal or internet-facing (public)
    alb.ingress.kubernetes.io/scheme: internet-facing
  
  # Add SSL Cert 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:682033465818:certificate/8f15ef91-d1fe-4f5c-8f8e-72d2f9d47a08
  # Check health-check for our ALB
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
  # alb.ingress.kubernetes.io/healthcheck-port specifies the port used when performing health check on targets.
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port    
# traffic-port: This is the port number that the Target Group uses to send incoming application traffic to the targets. 
# Since we are using a NodePort service, the traffic-port must be set to the NodePort (e.g., 31234).
# healthcheck-port: traffic-port: By setting the health check port to traffic-port, you are telling the ALB: "The port I use for sending live traffic (the NodePort) is the exact same port that you should use to check the health of the target."

########################################################################################################################
# Here we can only enalbe health-check for one service only. And Can't for multiple value. It's not allowed.
# That's for We enabled this health-check for all services at "kind: Service" service level in annotations.
########################################################################################################################

# # Check health check on path of app1.
#     alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
# # Check health check on path of app2.
#     alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
# # Check health check on path of app3.
#     alb.ingress.kubernetes.io/healthcheck-path: /app3/index.html

# Check for health check of interval for 10s.
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'

# Health-check will fail if no respons within 8s.
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'

# status code that should be expected when doing health checks against the specified health check path.
    alb.ingress.kubernetes.io/success-codes: '200'

# Check for health-check atleast 2 times before considering into UNHEALTHY
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'

    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
 # SSL Redirect Setting for HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    # External DNS - For creating DNS Record itself.
    external-dns.alpha.kubernetes.io/hostname: extdns1.bhavindevops.shop, extdns2.bhavindevops.shop
spec:
  ingressClassName: my-aws-ingress-class # Define here which ingress class you want to use as default. If you have 2 diff SA with diff permissions , so Make one of them as default for LB.
  rules:
    - http:
        paths: 
        # Add Path for App1
          - pathType: Prefix
            path: /app1/
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
        # Add Path for App2
          - pathType: Prefix
            path: /app2/
            backend:
              service:
                name: app2-nginx-nodeport-service
                port: 
                  number: 80
        # Add Path for App3
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app3-nginx-nodeport-service
                port: 
                  number: 80
